# RemoteFireworkCueSystem

./: .gitignore  README.md  platformio.ini  serialMonitor.py
.superpowers/sdd/: p3task4-race-fix-report.md  task-1-report.md  task-2-report.md  task-4-report.md  task-4a-report.md  task-5-report.md
components/fireworkcore/: CMakeLists.txt
components/fireworkcore/host_test/: CMakeLists.txt  check.h  fake_channel_driver.h  test_arming.cpp  test_box_controller.cpp  test_box_link.cpp  test_crc32.cpp  test_protocol.cpp  test_recent_ids.cpp  test_rig.cpp  test_sequence.cpp  test_show_runner.cpp
components/fireworkcore/include/: arming.h  box_controller.h  box_link.h  channel_driver.h  crc32.h  protocol.h  recent_ids.h  sequence.h  show_runner.h
components/fireworkcore/src/: arming.cpp  box_controller.cpp  box_link.cpp  crc32.cpp  sequence.cpp  show_runner.cpp
components/fireworkcore/wasm/: sim_bindings.cpp  sim_bindings.h
controller/: .gitignore  CMakeLists.txt
controller/host_test/: CMakeLists.txt  test_event_log.cpp
controller/main/: CMakeLists.txt  config_store.cpp  config_store.h  controller_config.h  controller_main.cpp  espnow_tx.cpp  espnow_tx.h  event_log.cpp  event_log.h  pairing.example.h  secrets.example.h  web_server.cpp  web_server.h
cyd-dashboard/: .gitignore  CMakeLists.txt  sdkconfig.defaults
cyd-dashboard/host_test/: CMakeLists.txt  check.h  test_display_decode.cpp  test_status_parse.cpp
cyd-dashboard/main/: CMakeLists.txt  dashboard.cpp  dashboard.h  display.cpp  display.h  display_decode.cpp  display_decode.h  espnow_rx.cpp  espnow_rx.h  idf_component.yml  main.cpp  pairing.example.h  secrets.example.h  status_client.cpp  status_client.h  status_model.h  status_parse.cpp  status_parse.h  touch.cpp  touch.h  wifi_sta.cpp  wifi_sta.h
docs/: NEXT-STEPS.md
docs/superpowers/plans/: 2026-06-20-firework-core-foundation.md  2026-06-20-firmware-plan-2-firing-box-brain.md  2026-06-20-firmware-plan-3-firing-box-hardware.md  2026-06-20-firmware-plan-4-controller.md  2026-06-20-simulator-plan-a-sim-core.md  2026-06-20-simulator-plan-b-authoring.md  2026-06-23-box-telemetry.md  2026-06-23-cyd-dashboard.md  2026-06-24-cyd-espnow-transport.md  2026-06-24-observability-1-controller.md  2026-06-24-observability-2-web.md  2026-06-24-observability-3-cyd.md
docs/superpowers/specs/: 2026-06-20-firework-simulator-design.md  2026-06-20-wireless-firework-show-controller-design.md  2026-06-23-box-telemetry-design.md  2026-06-23-cyd-dashboard-design.md  2026-06-24-cyd-espnow-transport-design.md  2026-06-24-observability-design.md
firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  arm_switch.cpp  arm_switch.h  board_config.h  espnow_link.cpp  espnow_link.h  expander_codec.h  expander_driver.cpp  expander_driver.h  firing_box_main.cpp  pairing.example.h  status_leds.cpp  status_leds.h  stub_channel_driver.h
firmware/test_codec/: CMakeLists.txt  check.h  test_codec.cpp
oldfiles/: Working.cpp  main.cpp
scripts/: gen-pairing.ps1
src/: master.cpp  slave.cpp
test/test_master/: test_main.cpp
test/test_slave/: test_main.cpp
test_src/: ssr_test.cpp
webui/: .gitignore  EMSDK.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/scripts/: build-wasm.sh  embed-www.sh
webui/src/: App.svelte  main.ts  stores.ts
webui/src/components/: AuthoringPanel.svelte  BoxPanel.svelte  ChannelEditor.svelte  ChannelGrid.svelte  ControllerPanel.svelte  DiagPanel.svelte  FaultBanner.svelte  GroupEditor.svelte  LogPanel.svelte  SequenceEditor.svelte  TransportControls.svelte
webui/src/core/: connection.ts  live_connection.ts  wasm.ts
webui/src/lib/: config.ts  events.ts
webui/test/: config.test.ts  events.test.ts  wasm.smoke.test.ts
