cmake_minimum_required(VERSION 3.16)
project(cyd_host_test CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
enable_testing()
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../main)
add_executable(test_status_parse test_status_parse.cpp ../main/status_parse.cpp)
add_test(NAME test_status_parse COMMAND test_status_parse)
